fixing max & min height, replacer img broken in module gallery

--- a/public/css/styles-bn.css
+++ b/public/css/styles-bn.css
@@ -36,6 +36,10 @@
     background-color: #00cec9 !important;
 }
 
+.img-gallery {
+    max-height: 200px;
+    min-height: 200px;
+}
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
@@ -67,7 +71,7 @@
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-
+    
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
